Fix issue overlap on right column (#9)
* Wrap ads to get total height
 * Add viewport scale to improve mobile version

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -251,6 +251,10 @@ header .issue-info {
   margin-bottom: 10px;
 }
 
+.sml-ad-container {
+  width: 100%;
+}
+
 .subscribeers-baner {
   font-family: Georgia, Times, 'Times New Roman', serif;
   color: #BD0808;
